--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
+<!DOCTYPE html>
 <html> 
 <head>
     <meta charset="UTF-8"> <!-- Making sure that all languages, characters etc. are supported -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- To enable the website functions correctly on any type of device -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-</head>
+<title>Raynardt Louw - Portfolio</title>
+
 <script>
     function clearForm(){
         document.getElementById("contactForm").reset();
     }
 </script>
+</head>
 <body>
     
     <div class="background"></div>
